--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -3,64 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        header{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            gap: 10px;
-            color: green;
-        }
-        button{
-            width: 100px;    
-            border: none;  
-            background-color: red;
-            border-radius: 10px;
-            padding: 10px;
-            color: antiquewhite;
-        }
-        .container2{
-            background-color: aqua;
-            display: flex;
-        }
-        .el4,child1{
-            width: 50%;
-        }
-        .child1{
-            padding: 20% 10% 0% 20%;
-        }
-        
-    </style>
+    <title>E-commence Login</title>
 </head>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background-color: #f5f5f5;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 15px;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+.login-container {
+    width: 300px;
+    margin: 100px auto;
+    padding: 20px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    background-color: #ff6600;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #e65c00;
+}
+
+#message {
+    color: red;
+}
+</style>
 <body>
-    
+
     <header>
-        <img width="30px" src="https://www.creative-tim.com/assets/logo/logo-ct-simple-0e135addaeddc410e2e0a2af78b5222369fe90933115fbb7659278a7be5b675e.png" alt="">
-        <h1 class="el2">Material Kit 2 PRO React</h1>
-        <div>costom development</div>
-        <div>preview</div>
-        <div>docs</div>
-        <div><button>buy now</button></div>
-        <div><button>free demo</button></div>
+        <h1>E-commence</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#" id="loginLink">Login</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="container2" >
-        <img class="el4" src="https://s3.amazonaws.com/creativetim_bucket/products/89/original/material-kit-2-pro-react.jpg?1641568034" alt="">
-    <div class="child1"><b>Material Kit 2 PRO React</b><br>
-            <p>Premium ReactJS & MUI Kit</p><br>
-            <button>buy now</button>
-        <button> get free demo</button>
-    </div>
+    <section class="login-container">
+        <h2>Login with email</h2>
+        <form id="loginForm">
+            <input type="email" id="email" placeholder="Enter Email" required>
+            <input type="password" id="password" placeholder="Enter Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p id="message"></p>
+    </section>
 
-   
-</div>
+    <footer>
+        <p>&copy; 2025 E-commence. All rights reserved.</p>
+    </footer>
+
+    <script>
+const user = {
+    email: "test@E-commence.com",
+    password: "123456"
+};
+
+document.getElementById("loginForm").addEventListener("submit", function(event) {
+    event.preventDefault(); 
+
+    let email = document.getElementById("email").value;
+    let password = document.getElementById("password").value;
+    let message = document.getElementById("message");
+
+    if (email === user.email && password === user.password) {
+        message.style.color = "green";
+        message.innerText = "Login successful!";
+        setTimeout(() => {
+            window.location.href = "http://127.0.0.1:5500/e-commerce/projectE-commerce.html";
+        }, 2000);
+    } else {
+        message.style.color = "red";
+        message.innerText = "Invalid email or password!";
+    }
+});
+    </script>
 </body>
 </html>
 
